Added audience collections to the main form for service links

--- a/app/views/page_editions/edit_partials/_form.html.slim
+++ b/app/views/page_editions/edit_partials/_form.html.slim
@@ -4,7 +4,7 @@
     .row
       .col-md-6
         .form-group
-          = label_tag 'Type'
+          = label_tag 'Page Type'
           = wcms_component "forms/multiselect",
             attribute: :source_type,
             collection: PageEdition::AVAILABLE_SOURCE_TYPES,
