adding a hidden field with an empty value clears the site_category_ids field. this is how the wcms_component used to manage department_ids works.

--- a/app/views/page_editions/edit_partials/_form.html.slim
+++ b/app/views/page_editions/edit_partials/_form.html.slim
@@ -102,6 +102,7 @@
       br
       - if policy(@page_edition).can_change?(:site_category_ids)
         .multi_category_select
+          input name="page_edition[site_category_ids][]" type="hidden" value=""
           = select_tag 'page_edition[site_category_ids]', options_for_select([], @page_edition.site_category_ids), multiple: true, class: "multiselect"
       - else
         .well.well-faux-input
