The choose template page was always being shown after submitting the JSON editor

--- a/app/views/page_editions/edit_partials/_presentation_data.html.slim
+++ b/app/views/page_editions/edit_partials/_presentation_data.html.slim
@@ -9,7 +9,7 @@
       .row.form-section
         .col-xs-12
           .form-group
-            - if params[:choose_template]
+            - if params[:choose_template].present?
               .text-right = link_to 'Edit Data', params.merge(choose_template: nil)
               = wcms_component "forms/data_template_picker", form: f
 
