--- a/app/views/page_editions/_page_editions.html.slim
+++ b/app/views/page_editions/_page_editions.html.slim
@@ -7,6 +7,7 @@
         th Site
         th Slug
         th Status
+        th
     tbody
       - @page_editions.each do |page|
         tr
@@ -15,3 +16,6 @@
           td = page.site
           td = page.slug
           td = status_for page
+          td
+            - if page.redirected?
+              = content_tag :span, 'Redirected', class: "label label-danger", title: "This page has been redirected to #{page.redirect.destination}"
