--- a/app/views/page_editions/index.html.slim
+++ b/app/views/page_editions/index.html.slim
@@ -21,12 +21,13 @@
         = nav_list_link 'Up for Review', :status, 'request_review'
         = nav_list_link 'Published', :status, 'published'
         = nav_list_link 'Archived', :status, 'archived'
-      / # TODO: Add Mongoid::Timestamps to model in the gem file first!
-      / = nav_pill_dropdown 'Last Changed', :last_change do
-      /   = nav_list_link 'Today', :last_change, Date.today
-      /   = nav_list_link 'Yesterday', :last_change, 1.day.ago.to_date
-      /   = nav_list_link "Last #{1.week.ago.strftime('%A')}", :last_change, 1.week.ago.to_date
-      /   = nav_list_link 1.month.ago.strftime('%B %e'), :last_change, 1.month.ago.to_date
+      = nav_pill_dropdown 'Last Changed', :last_change do
+        = nav_list_link 'Today', :last_change, Date.today
+        = nav_list_link 'Yesterday', :last_change, 1.day.ago.to_date
+        = nav_list_link "Last #{1.week.ago.strftime('%A')}", :last_change, 1.week.ago.to_date
+        = nav_list_link 1.month.ago.strftime('%B %e'), :last_change, 1.month.ago.to_date
+      - if @redirected_pages.present?
+        = nav_pill_link 'Redirected Pages', :redirected
     .clearfix
 
   - if @page_editions.empty?
