You could not select the role when giving users permission to sites. Brought this up to date with how it works in new-publisher.

--- a/app/views/shared/_permissions_tab.html.slim
+++ b/app/views/shared/_permissions_tab.html.slim
@@ -1,4 +1,5 @@
 - policy = ActorPolicy.new(current_user, obj)
+- show_roles ||= obj.respond_to?(:enabled_roles)
 
 .panel.panel-default
   .panel-heading
@@ -12,7 +13,9 @@
           th
           th Name
           th Email
-        - obj.actors.sort_by{|a| a.first_name }.each do |actor|
+          - if show_roles
+            th Role
+        - obj.actors.uniq.sort_by{|a| a.first_name }.each do |actor|
           tr
             td
               - if policy.destroy?
@@ -29,6 +32,8 @@
 
             td = actor
             td = actor.email
+            - if show_roles
+              td = obj.permissions.by_actor(actor).map{|perm| perm.ability.to_s.titleize}.join(', ')
 
     - if policy.create?
       br
@@ -36,6 +41,10 @@
         #new_permission_form
           .form-inline
             .form-group> = wcms_component 'forms/person_lookup', person_id_key: :_person_id
+            - if show_roles
+              .form-group>
+                = select_tag :role, grouped_options_for_select(obj.enabled_roles), class: "form-control multiselect"
+
             .form-group = submit_tag '+ add user', class: 'btn btn-default'
       div#note
         br
