hotfix for menu links example json

--- a/app/views/menus/edit_partials/_menu_links.html.slim
+++ b/app/views/menus/edit_partials/_menu_links.html.slim
@@ -8,7 +8,7 @@
       br
       br
 
-      pre#example style="display: none;" = "[\n  {\n    \"title\": \"value\",\n    \"url\": \"http://something.com\",\n    \"page_edition_slug\": \"this-slug\",\n    \"menu_links\": [{\n      \"title\": \"value\",\n      \"url\": \"http://something.com\",\n      \"page_edition_slug\": \"that-slug\"\n    }]\n  },\n  {\n    \"title\": \"value\",\n    \"url\": \"http://something.com\",\n    \"page_edition_slug\": \"this-slug\"\n  }\n]"
+      pre#example style="display: none;" = "[\n  {\n    \"title\": \"value\",\n    \"url\": \"http://something.com\",\n    \"menu_links\": [{\n      \"title\": \"value\",\n      \"url\": \"http://something.com\"\n    }]\n  },\n  {\n    \"title\": \"value\",\n    \"url\": \"http://something.com\"\n  }\n]"
 
       br
 
