--- a/app/views/page_editions/edit_partials/_form.html.slim
+++ b/app/views/page_editions/edit_partials/_form.html.slim
@@ -164,7 +164,7 @@
         attribute: :generic_object_ids,
         collection: GenericObject.asc(:title),
         value_method: :id,
-        text_method: :title,
+        text_method: lambda {|f| "[#{f.type}] #{f.title}"},
         multiple: true
 
   .form-section
