Save!? Who needs to save!

--- a/app/views/page_editions/edit_partials/_relationships.html.slim
+++ b/app/views/page_editions/edit_partials/_relationships.html.slim
@@ -18,7 +18,7 @@
   /     .form-group
   /       = wcms_component "forms/related_object_tags", form: f
 
-  .form-footer
-    .pull-right
-      = f.submit 'Save', class: 'btn btn-biola'
-    .clearfix
+  / .form-footer
+  /   .pull-right
+  /     = f.submit 'Save', class: 'btn btn-biola'
+  /   .clearfix
