--- a/app/views/important_dates/index.html.slim
+++ b/app/views/important_dates/index.html.slim
@@ -20,6 +20,7 @@
         = nav_pill_dropdown 'Audience', :audience do
           - @available_audiences.each do |aud|
             = nav_list_link aud, :audience, aud
+      = nav_pill_link 'Future Dates', :future
       = nav_pill_link 'Deadline?', :deadline
       = nav_pill_dropdown 'Last Changed', :last_change do
         = nav_list_link 'Today', :last_change, Date.today
