Adding publisher name to the menu WCMS-568

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,7 +21,7 @@ html lang="en-us"
         {body: 'Page Editions', url: :page_editions_path},
         {body: 'Service Links', url: :service_links_path},
         {body: 'Sites', url: :sites_path},
-      ]})
+      ], site_name: 'WCMS'})
 
       = wcms_component('alerts/message_list')
 
