--- a/app/views/important_dates/_menu.html.slim
+++ b/app/views/important_dates/_menu.html.slim
@@ -4,5 +4,9 @@
       = @important_date.title
     = menu_block(class: 'list-group-item') do |menu|
       = menu.add_item('Overview', default: true) { edit_important_date_path(@important_date, page: 'form') }
-      = menu.add_item('History') { edit_important_date_path(@important_date, page: 'activity_logs') } if policy(@important_date).can_manage?(:activity_logs)
+      = menu.add_item('History') { edit_important_date_path(@important_date, page: 'logs') } if policy(@important_date).can_manage?(:logs)
 
+
+  .list-group
+    - if policy(@important_date).destroy?
+      .list-group-item.list-group-item-danger = link_to fa_icon('trash', text: "Delete this date"), [@important_date], method: :delete, data: { confirm: "Are you sure that you want to delete #{@important_date}?" }
