--- a/app/views/shared/_user_activity_and_changes.html.slim
+++ b/app/views/shared/_user_activity_and_changes.html.slim
@@ -12,7 +12,7 @@
           th
           th Action
           th User
-          th Email
+          / th Email
           th Created
           th Changes
 
@@ -20,15 +20,18 @@
           - logs(obj).each do |change|
             - if change.class == Change
               tr
-                td = link_to fa_icon('undo'), [:undo, change], data: { confirm: "Are you sure that you want to undo this change?" }
-
-                td = change.action.try(:humanize)
+                td = link_to fa_icon('undo'), undo_wcms_components_change_path(change), data: { confirm: "Are you sure that you want to undo this change?" }
+                td
+                  - if change.action.present?
+                    = "#{change.action == 'destroy' ? 'Destroyed' : change.action.try(:humanize).to_s + 'd'} #{change.association_chain.last[:name].titleize}"
                 td = change.modifier.try(:to_s)
-                td = change.modifier.try(:email)
+                / td = change.modifier.try(:email)
                 td = change.created_at.to_s(:long_ordinal)
                 td
 
                   ul.changes
+                    - if (change.association_chain.last[:name] != obj.class.to_s) && change.trackable.present?
+                      strong = "#{change.association_chain.last[:name].titleize} Title: #{change.trackable.to_s}"
                     - (change.tracked_edits[:add]||[]).each do |k,v|
                       li.remove = "Added field #{k} value #{v}"
 
