Updating to search and filtering Adding a "All Pages" filter that lets you search just under the child node or for all pages.

--- a/app/views/page_editions/index.html.slim
+++ b/app/views/page_editions/index.html.slim
@@ -1,8 +1,9 @@
 scss:
-  td { cursor: pointer; }
-  .breadcrumb li { cursor: pointer; }
-  .pagePreview .btn.pull-right { margin-left: 5px; }
-
+  #PageNavigator {
+    .breadcrumb li { cursor: pointer; }
+    .pagePreview .btn.pull-right { margin-left: 5px; }
+    .label + .label { margin-left: 5px; }
+  }
 
 .container.page
   - if params[:sid]
