Updating new page button Setting site title as breadcrumbs root

--- a/app/views/page_editions/index.html.slim
+++ b/app/views/page_editions/index.html.slim
@@ -8,7 +8,7 @@ css:
 
 .container.page
   - if params[:sid]
-    #PageNavigator
+    #PageNavigator data-site-title=@site.title
 
   - else
     h3 Select Site
