--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,7 +18,7 @@ html lang="en-us"
         {body: 'Campus Locations', url: :campus_locations_path},
         {body: 'Important Dates', url: :important_dates_path},
         {body: 'Menus', url: :menus_path},
-        {body: 'Page Editions', url: :page_editions_path},
+        {body: 'Pages', url: :page_editions_path},
         {body: 'Service Links', url: :service_links_path},
         {body: 'Sites', url: :sites_path},
       ], site_name: 'WCMS'})
