updated history tracking. At the moment embedded documents aren't creating history tracks because they aren't "directly" calling save. for instance if i were to do page_edition.audience_collection.create(params) it would work but because we are saving them indirectly through page edition it isn't calling save on the child object for some reason. e.g. page_edition.update_attributes({audience_collection: [{housing_status: [off_campus]}]}) ... or something like that

--- a/app/views/campus_locations/_menu.html.slim
+++ b/app/views/campus_locations/_menu.html.slim
@@ -4,5 +4,4 @@
       = @campus_location.title
     = menu_block(class: 'list-group-item') do |menu|
       = menu.add_item('Overview', default: true) { edit_campus_location_path(@campus_location, page: 'form') }
-      = menu.add_item('History') { edit_campus_location_path(@campus_location, page: 'logs') } if policy(@campus_location).can_manage?(:logs)
-
+      = menu.add_item('History') { object_index_wcms_components_changes_path(klass: @campus_location.class, id: @campus_location.id) } if policy(@campus_location).can_manage?(:logs)
