--- a/app/views/campus_locations/index.html.slim
+++ b/app/views/campus_locations/index.html.slim
@@ -1,3 +1,5 @@
+- content_for :site_nav_right do
+  = link_to 'History', wcms_components_changes_path(klass: 'campus_locations'), class: "top-nav-link"
 .container.page
   .page-header
     .pull-right
