--- a/app/views/media/index.html.slim
+++ b/app/views/media/index.html.slim
@@ -5,7 +5,7 @@
         = text_field_tag 'q', params[:q], class: 'form-control', placeholder: 'Search', tabindex: '1'
     .pull-right.pad-right
       - if policy(Medium).create?
-        = link_to 'New Medium', new_medium_path, class: 'btn btn-default'
+        = link_to 'New Media', new_medium_path, class: 'btn btn-default'
     .clearfix
 
   - if @media.empty?
